LLM4Config/assets/wikimedia_aqs-http-gateway.yaml
---
# Source: aqs-http-gateway/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aqs-http-gateway-my-aqs-http-gateway  
  labels:
    app: aqs-http-gateway
    chart: aqs-http-gateway-0.0.7
    release: my-aqs-http-gateway
    heritage: Helm
spec:
  podSelector:    
    matchLabels:
      app: aqs-http-gateway
      release: my-aqs-http-gateway
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP      
  egress:
---
# Source: aqs-http-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqs-http-gateway-my-aqs-http-gateway  
  labels:
    app: aqs-http-gateway
    chart: aqs-http-gateway-0.0.7
    release: my-aqs-http-gateway
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: aqs-http-gateway
    release: my-aqs-http-gateway
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: aqs-http-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqs-http-gateway-my-aqs-http-gateway  
  labels:
    app: aqs-http-gateway
    chart: aqs-http-gateway-0.0.7
    release: my-aqs-http-gateway
    heritage: Helm
spec:
  selector:    
    matchLabels:
      app: aqs-http-gateway
      release: my-aqs-http-gateway
  replicas: 1
  template:
    metadata:
      labels:        
        app: aqs-http-gateway
        release: my-aqs-http-gateway
        routed_via: my-aqs-http-gateway
      annotations:
        checksum/secrets: aea9c45d88890d16b995933b66686f0cd00177cce88d036259b49c85b6f74a8a
        checksum/config: cd5c76bd35e351b039267617457a50e9d9aeb7170c55c6eff976a3609d0f2a54        
    spec:
      containers:        
        # The main application container
        - name: aqs-http-gateway-my-aqs-http-gateway
          image: "docker-registry.wikimedia.org/:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 400Mi
          
          volumeMounts:
            - mountPath: /etc/aqs-http-gateway/
              name: config-volume  
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
               drop:
               - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault        
      volumes:        
        
        # TLS configurations
        # Additional app-specific volumes.
        - configMap:
            name: aqs-http-gateway-base-config
          name: config-volume
---
# Source: aqs-http-gateway/templates/ingress.yaml
---
---
# Source: aqs-http-gateway/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'aqs-http-gateway-my-aqs-http-gateway-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'aqs-http-gateway-my-aqs-http-gateway-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(AQS_HTTP_GATEWAY_MY_AQS_HTTP_GATEWAY_SERVICE_HOST)', 'http://aqs-http-gateway-my-aqs-http-gateway:8080']    
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
         drop:
         - ALL
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
  dnsPolicy: ClusterFirst
  restartPolicy: Never
